--- a/scss/_imports.scss
+++ b/scss/_imports.scss
@@ -1,1 +1,7 @@
+@import 'partials/variables';
+
+@import 'custom';
+@import 'partials/register';
+
+
 @import '../node_modules/bootstrap/scss/bootstrap';
