--- a/scss/_imports.scss
+++ b/scss/_imports.scss
@@ -2,6 +2,7 @@
 
 @import 'custom';
 @import 'partials/register';
-
+@import 'partials/icons';
+@import 'partials/buttons';
 
 @import '../node_modules/bootstrap/scss/bootstrap';
