--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&family=Noto+Sans+JP:wght@400;700;900&display=swap');
 
 body {
-    background-image: url("/images/intro.jpeg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: left;
-    height: 1000px;
     font-family: 'Noto Sans JP', sans-serif;
 }
 .intro {
     position: absolute;
+    background-image: url("/images/intro.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: left;
 }
 
 .btn {
@@ -27,28 +26,28 @@ body {
     font-weight: 900;
     text-align: center;
     margin-top: 250px;
-    font-size: 60px;
+    font-size: 80px;
     color: #7468FF;
 }
 
 .intro-text {
-    margin: 50px 25px;
-    padding: 100px 25px 50px 25px;
-    color: white;
+    margin: 100px 50px 0px 50px;
+    padding: 80px 0px 50px 0px;
+    color: #444444;
     font-size: 25px;
     text-align: center;
 }
 
 .opacity-bgr {
-    background-color: rgba(0, 0, 0, 0.442);
-    border-top-left-radius: 50px;
-    border-top-right-radius: 50px;
+    background-color: rgb(255, 255, 255);
+    border-top-left-radius: 80px;
+    border-top-right-radius: 80px;
 }
 
 .dots {
     display: flex;
     justify-content: center;
-    padding-bottom: 50px;
+    padding-bottom: 0px;
 }
 
 .dot {
@@ -57,5 +56,5 @@ body {
     border-radius: 50%;
     background-color: white;
     border: 2px solid #7468FF;
-    margin: 5px;
+    margin: 10px;
 }
