--- a/css/intropage.css
+++ b/css/intropage.css
@@ -30,6 +30,11 @@ body {
     color: #7468FF;
 }
 
+.intro-h1-small {
+    font-size: 50px;
+    margin-top: 300px;
+}
+
 .intro-text {
     margin: 100px 50px 0px 50px;
     padding: 80px 0px 50px 0px;
@@ -57,4 +62,8 @@ body {
     background-color: white;
     border: 2px solid #7468FF;
     margin: 10px;
+}
+
+.dot-active {
+    background-color: #7468FF;
 }
