--- a/css/intropage.css
+++ b/css/intropage.css
@@ -1,14 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&family=Noto+Sans+JP:wght@400;700;900&display=swap');
 
-body {
+html, body {
+    height: 100%;
     font-family: 'Noto Sans JP', sans-serif;
+    display: flex;
+    flex-direction: column;
 }
 .intro {
-    position: absolute;
     background-image: url("/images/intro.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: left;
+    flex: 1 0 auto;
 }
 
 .btn {
@@ -47,12 +50,16 @@ body {
     background-color: rgb(255, 255, 255);
     border-top-left-radius: 80px;
     border-top-right-radius: 80px;
+    height: 40%;
+}
+
+.opacity-bgr {
+    height: 50%;
 }
 
 .dots {
     display: flex;
     justify-content: center;
-    padding-bottom: 0px;
 }
 
 .dot {
