--- a/scss/_imports.scss
+++ b/scss/_imports.scss
@@ -1,4 +1,6 @@
-@import '../node_modules/bootstrap/scss/bootstrap';
-@import 'variables';
-@import 'global';
-@import 'chat';
+@import "../node_modules/bootstrap/scss/bootstrap";
+@import "variables";
+@import "global";
+@import "profile";
+@import "chat";
+@import "login";
