--- a/scss/partials/_register.scss
+++ b/scss/partials/_register.scss
@@ -12,12 +12,7 @@
     margin: 1rem;
   }
 
-  .center-vertically {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-
+  .center-totally {
     div {
       margin: 2rem auto;
     }
@@ -31,7 +26,12 @@
     display: block;
     margin: auto;
   }
-}
 
-.register.person {
+  form {
+      margin-bottom: 3rem;
+  }
+
+  .form-control {
+      border-color: $primary-info-blue;
+  }
 }
