--- a/scss/partials/_icons.scss
+++ b/scss/partials/_icons.scss
@@ -1,5 +1,5 @@
 .icon-wrapper-border {
-    border: 1px solid $primary;
+    border: 1px solid $primary-purple;
     border-radius: 50%;
     width: 80px;
     height: 80px;
