--- a/scss/partials/_register.scss
+++ b/scss/partials/_register.scss
@@ -8,10 +8,6 @@
     }
   }
 
-  h1 {
-    margin: 1rem;
-  }
-
   .center-totally {
     div {
       margin: 2rem auto;
@@ -22,17 +18,23 @@
     margin: 0.5rem auto;
   }
 
+  .h6 svg {
+      margin: 0;
+  }
+
   button {
     display: block;
     margin: auto;
+    padding: 0.5rem 2.5rem;
+    border-radius: 50px;
   }
-
+  
   form {
       margin-bottom: 3rem;
   }
 
   .form-control {
-      border-color: $primary;
+      border-color: $primary-purple;
       border-radius: 50px;
       padding: 1.5rem;
   }
