--- a/scss/_imports.scss
+++ b/scss/_imports.scss
@@ -3,13 +3,11 @@
 @import '../node_modules/bootstrap/scss/bootstrap';
 
 @import 'global';
+@import 'profile';
 @import 'chat';
-@import "profile";
-@import "login";
+@import 'login';
 
 @import 'partials/layout';
 @import 'partials/register';
 @import 'partials/icons';
 @import 'partials/buttons';
-
-
