--- a/scss/_imports.scss
+++ b/scss/_imports.scss
@@ -7,6 +7,7 @@
 @import "profile";
 @import "login";
 @import "filter";
+@import "contract";
 
 @import "partials/layout";
 @import "partials/register";
