fixed naming on container class

--- a/scss/_filter.scss
+++ b/scss/_filter.scss
@@ -2,7 +2,7 @@
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
-.container-filter {
+.filter-container {
   padding-top: 3rem;
   padding-bottom: 3rem;
 }
