--- a/css/profilepage.css
+++ b/css/profilepage.css
@@ -136,3 +136,13 @@ section {
 .profile-about-text {
     margin-bottom: 100px;
 }
+
+.form-group {
+    margin: 25px 0;
+}
+
+.h2-big {
+    font-size: 20px;
+    margin-top: 50px;
+    color: #444444;
+}
